[project]
name = "mahgetgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "internetarchive>=5.0.5",
    "more-itertools>=10.5.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "traverser",
    "unidecode>=1.3.8",
    "waybackpy>=3.0.6",
]

[tool.uv.sources]
traverser = { git = "https://github.com/orgpedia/traverser.git" }
